@startuml
left to right direction

class Administrador {
    - id : int
    - nome : string
    - email : string
    - telefone : string
    + cadastrarFuncionario()
    + cadastrarEquipamento()
    + cadastrarCliente()
    + criarServico()
    + alocarRecursos()
    + gerarRelatorio()
}

class Funcionario {
  - id : int
  - nome : string
  - cpf : string
  - email : string
  - numTelefone : string
  - cargo : string
  - status : string
  + cadastrar()
  + atualizar()
  + desativar()
}

class Equipamento {
  - id : int
  - nome : string
  - tipo : string
  - descricao : string
  - status : string
  + cadastrar()
  + atualizar()
  + desativar()
}

class ParametrizacaoFuncionario {
  - id : int
  - idFuncionario : int
  - valorDiaria : double
  + definirValor()
}

class ParametrizacaoEquipamento {
  - id : int
  - idEquipamento : int
  - valorHora : double
  + definirValor()
}

class Cliente {
  - nome : string
  - cpfCnpj : string
  - email : string
  - telefone : string
  + atualizar()
}

class Servico {
  - id : int
  - idCliente : int
  - descricao : string
  - dataInicio : date
  - dataFim : date
  - tempoExpediente : string
  - status : string
  - orcamento : double
  + iniciar()
  + finalizar()
  + atualizarStatus()
}

class AlocacaoFuncionario {
  - id : int
  - idFuncionario : int
  - idServico : int
  - data : date
  - hora : time
  - valorDiaAlocado : double
  + registrar()
}

class AlocacaoEquipamento {
  - id : int
  - idEquipamento : int
  - idServico : int
  - data : date
  - hora : time
  - valorHoraAlocado : double
  + registrar()
}

class Feedback {
  - id : int
  - idServico : int
  - idFuncionario : int
  - comentario : string
  - data : date
  + registrar()
}

class Usuario {
  - id : int
  - idFuncionario : int
  - papel : string
  - login : string
  - senha : string
  + autenticar()
}

'Relacionamentos principais
Administrador "1" -- "1..*" Funcionario
Administrador "1" -- "1..*" Equipamento
Administrador "1" -- "1..*" Servico

Funcionario "1" -- "1" ParametrizacaoFuncionario
Funcionario "1" -- "1..*" AlocacaoFuncionario
Funcionario "1" -- "1" Usuario

Equipamento "1" -- "1..*" AlocacaoEquipamento
Equipamento "1" -- "1..*" ParametrizacaoEquipamento

Cliente "1" -- "1..*" Servico

Servico "1" -- "1..*" AlocacaoFuncionario
Servico "1" -- "1..*" AlocacaoEquipamento

AlocacaoFuncionario "1" -- "1..*" Feedback
@enduml